--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,50 @@
 body {
-    background-color:#FFFFFF ;
-    color:#025949;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+    background-color:#A51208;
+    color:#FFFF;
+    text-decoration: none;
 }
+.molle-regular-italic {
+    font-family: "Molle", cursive;
+    font-weight: 400;
+    font-style: italic;
+  }  
 section {
-    text-align: left;
     font-size: x-large;
 }
 header{
     text-align: left;
     font-size:60px ;
 }
+.center{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+
 img{
-width:400px;
 height: 400px;
-border-radius: 50%;
 }
 h1{
     text-align: center;
+    font-size: 50px;
 }
 h2{
     text-align: center;
     font-size: 22px;
 }
-a {
-    text-decoration: none;
+h3{
+    font-size: 20px;
+    text-align: center;
 }
 h4{
-    text-align: left;
+    text-align: center;
+    font-size: 20px;
+}
+ol{
+font-size: 18px;
+}
+a {
+    text-decoration: none;
 }
